--- a/led-matrix-sce/src/styles/Buttons.css
+++ b/led-matrix-sce/src/styles/Buttons.css
@@ -6,13 +6,11 @@
 }
 
 .button-stack button {
-    padding: 10px, 25px;
-    /* Reduced vertical padding on buttons */
+    padding: 10px 25px;
     font-size: 16px;
     border: none;
     border-radius: 8px;
-    background-color: #2c3e50;
-    color: white;
+    color: black;
     cursor: pointer;
     transition: all 0.3s ease;
     min-width: 200px;
@@ -21,8 +19,31 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.button-stack button:hover {
-    background-color: #34495e;
+/* Leetcode button */
+.button-stack button:nth-child(1) {
+    background-color: rgb(255, 191, 0);
+}
+
+.button-stack button:nth-child(1).active {
+    background-color: rgb(162, 125, 14);
+}
+
+/* Announcement button */
+.button-stack button:nth-child(2) {
+    background-color: #ff2800;
+}
+
+.button-stack button:nth-child(2).active {
+    background-color: #cc1f00ab;
+}
+
+/* Clock & Weather button */
+.button-stack button:nth-child(3) {
+    background-color: #3498db;
+}
+
+/* Hover effects */
+.button-stack button:hover:not(.active) {
     transform: translateY(-2px);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
 }
@@ -32,43 +53,8 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-/* Specific button colors */
-.button-stack button:nth-child(1) {
-    opacity: 0.6;
-    cursor: default;
+/* Active state overrides hover */
+.button-stack button.active {
     transform: none;
-    box-shadow: none;
-    background-color: #808080;
-}
-
-.button-stack button:nth-child(2) {
-    background-color: #ff2800;
-    color: black;
-    /* Stop button - red */
-}
-
-.button-stack button:nth-child(3) {
-    background-color: #3498db;
-    color: black;
-    /* Reset button - blue */
-}
-
-/* Hover states for specific buttons */
-.button-stack button:nth-child(1):hover {
-    background-color: rgb(255, 191, 0);
-    color: white;
-    cursor: pointer;
-    transform: translateY(-2px);
-}
-
-.button-stack button:nth-child(2):hover {
-    background-color: #ff2800;
-    color: white;
-    cursor: pointer;
-}
-
-.button-stack button:nth-child(3):hover {
-    background-color: #3498db;
-    color: white;
-    cursor: pointer;
+    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2);
 }
